--- a/workers/clawdbot-webhook/wrangler.toml
+++ b/workers/clawdbot-webhook/wrangler.toml
@@ -2,6 +2,16 @@ name = "clawdbot-webhook"
 main = "src/index.ts"
 compatibility_date = "2024-01-01"
 
+# Durable Objects configuration
+[[durable_objects.bindings]]
+name = "WEBSOCKET_HUB"
+class_name = "WebSocketHub"
+
+# Durable Object class definition
+[[migrations]]
+tag = "v1"
+new_classes = ["WebSocketHub"]
+
 [vars]
 # Environment variables can be added here
 # CLAWDBOT_BRIDGE_URL = "wss://your-bridge-url.com"
