Rename all references from clawdbot to openclaw
- Rename workers/clawdbot-webhook to workers/openclaw-webhook
- Rename internal/clawdbot to internal/openclaw
- Rename binary from clawdbot-bridge to openclaw-bridge
- Update all import paths and struct names
- Update documentation and comments
- Update .gitignore

This aligns the project naming with the openclaw/openclaw naming convention.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Build output
 /bin/
 /dist/
-clawdbot-bridge
+openclaw-bridge
 /bridge
 
 # Go workspace file
@@ -40,3 +40,4 @@ config.yaml
 
 node_modules/
 .wrangler
+openclaw-bridge
