Fix WebSocket hibernation: store server socket not client
The issue was that we were storing and trying to send to the client socket,
but with hibernation, we should store the server socket (the one passed to
acceptWebSocket()) instead.

Changes:
- Store server socket in connections Set, not client socket
- Remove welcome message send on connection (not needed with hibernation)
- Only log hibernation awake when there are actual connections

This fixes the error: "You must call accept() or state.acceptWebSocket()
on this WebSocket before sending messages."

--- a/workers/openclaw-webhook/wrangler.toml
+++ b/workers/openclaw-webhook/wrangler.toml
@@ -28,3 +28,18 @@ name = "openclaw-webhook-prod"
 # routes = [
 #   { pattern = "webhook.yourdomain.com/*", zone_name = "yourdomain.com" }
 # ]
+
+[observability]
+enabled = false
+head_sampling_rate = 1
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
