Enforce mandatory UID for WebSocket routing
- Bridge now validates UID is configured before connecting
- Webhook API rejects connections without UID (returns 400)
- Test page requires UID input before attempting connection
- Supports both /ws?uid=xxx and /ws/xxx patterns

--- a/openclaw-mapp/package.json
+++ b/openclaw-mapp/package.json
@@ -29,6 +29,7 @@
     "@babel/runtime": "^7.28.6",
     "@tarojs/cli": "^4.1.11",
     "@tarojs/webpack5-runner": "^4.1.11",
+    "@types/react": "^19.2.10",
     "babel-preset-taro": "^4.1.11",
     "typescript": "^5.9.3"
   }
