--- a/openclaw-mapp/package.json
+++ b/openclaw-mapp/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:weapp": "taro build --type weapp",
     "dev:weapp": "npm run build:weapp -- --watch",
-    "typescript": "tsc --noEmit"
+    "typescript": "tsc --noEmit",
+    "postinstall": "weapp-tw patch"
   },
   "dependencies": {
     "@tarojs/components": "4.1.11",
@@ -31,6 +32,8 @@
     "@tarojs/webpack5-runner": "^4.1.11",
     "@types/react": "^19.2.10",
     "babel-preset-taro": "^4.1.11",
+    "tailwindcss": "^3.4.17",
+    "weapp-tailwindcss": "^4.9.8",
     "typescript": "^5.9.3"
   }
 }
