--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,11 @@ jobs:
         with:
           go-version: "1.21"
 
-      - name: Build all platforms
+      - name: Build all platforms (release, no logging)
         run: bash scripts/build.sh
         env:
           VERSION: ${{ github.ref_name }}
+          RELEASE: "1"
 
       - name: Upload release assets
         uses: softprops/action-gh-release@v2
